--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+
         <div id="container">
-           <span>ცხელი ხაზი <a href="tel:+995 557 51 35 05 ">+995 557 51 35 05</a></span>
+           <span>ცხელი ხაზი <a href="tel:+995 557 51 35 05 ">+995 592 07 44 50
+</a></span>
             
     <h1><p id="text"><em>მოგესალმებით</em></p></h1>
         <ul>
@@ -52,4 +55,3 @@
        
     </body>
 </html>
-
